--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,36 @@
 .App {
   text-align: center;
+  color: #2d2e32;
+  font-family: 'Poppins', sans-serif;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li,
+figure,
+figcaption,
+blockquote,
+button,
+input,
+textarea {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
