--- a/src/Component/Hero.css
+++ b/src/Component/Hero.css
@@ -155,3 +155,14 @@
   
    
 }
+@media (max-width: 450px) {
+    .text-area h1{
+        font-size: 3rem;
+        line-height: 1.1;
+    }
+    .text-area p{
+        font-size: 1rem;
+      
+        padding: 0 0.5rem  ;
+    }
+}
